@@ -836,6 +836,7 @@ linux (6.1.85-1) UNRELEASED; urgency=medium
   * Refresh "efi: Lock down the kernel if booted in secure boot mode" (context
     changes in 6.1.84)
   * [rt] Refresh "serial: 8250: implement write_atomic"
+  * Refresh "x86: Make x32 syscall support conditional on a kernel parameter"
 
  -- Salvatore Bonaccorso <carnil@debian.org>  Mon, 01 Apr 2024 21:14:46 +0200
 
